crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_sequence_ref_before_consumption.txt
E = [{(E) (a)} (x)]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle consumes no input
 --> query.ptk:1:8
  |
1 | E = [{(E) (a)} (x)]
  |        ^
  |        |
  |        references itself
  |
help: recursive references must consume input before recursing
-------------------- SYMBOLS ---------------------
E
  E (cycle)
